# jav-rs

./: .gitignore  Cargo.toml  README.md
docker/: Dockerfile
src/: main.rs
src/jav/: ds.rs  mod.rs
src/jav/functions/: get_aliases.rs  get_brief.rs  get_magnets.rs  get_newly_released.rs  mod.rs  search_by_actress.rs  search_by_code.rs  translate2jp.rs
src/jav/sources/: avgle_com.rs  avhelp_memo_wiki.rs  common.rs  indexav_com.rs  javbus_com.rs  javmost_com.rs  mod.rs  traits.rs  warashi_asian_pornstars_fr.rs
