[package]
name = "jav-rs"
version = "0.1.0"
authors = ["Wheat Carrier <wheatcarrier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soup = "0.5.0"
reqwest = "0.10.6"
chrono = { version = "0.4.13", features = ["serde"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
rocket = "0.4.5"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }
select = "0.5.0"
html5ever = "0.25.1"
async-trait = "0.1.36"
lazy_static = "1.4.0"
regex = "1.3.9"
